# TaskLm

./: README.md  README_MAIN_AGENT.md  ffmpeg.sh  hello.py  pyproject.toml  yt-dlp.sh
boiler_plate/: PROMPT_GENERATOR.md  README.md  ffmpeg_processor.py  requirements_cuda.txt  telegram_bot.py
boiler_plate/firecrawl_boilerplate/: README.md  firecrawl_example.py  hello.py  pyproject.toml  schema_generator.py
boiler_plate/rclone_gdrive/: README.md  config.py  gdrive_manager.py  hello.py  main.py  pyproject.toml  setup.py  test_example.py
boiler_plate/whisper/: main.py  pyproject.toml
boiler_plate/yt-dlp/: yt_dlp_usage_example.py  ytdlp_downloader.py
config/: tokens.env.example
src/: goose.py  goose_prompt_generator.py  main_agent.py  web_page_analyzer.py  web_scraper_meta_agent.py
