[project]
name = "taskmind"
version = "0.1.0"
description = "AI agent that creates folders and generates Python files based on prompts"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "firecrawl-py>=2.8.0",
    "flask>=3.1.1",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "python-telegram-bot>=20.0",
    "tqdm>=4.67.1",
    "yt-dlp>=2025.5.22",
]

[tool.uv.workspace]
members = ["boiler_plate/pdf_utils", "boiler_plate/pdf-utils", "boiler_plate/pdf-processor", "boiler_plate/rclone_gdrive", "boiler_plate/firecrawl_boilerplate", "testing", "bot"]
